Resolves issues with sort filter on mobile

--- a/src/components/SelectMenu/SelectMenu.module.scss
+++ b/src/components/SelectMenu/SelectMenu.module.scss
@@ -8,7 +8,7 @@
 }
 
 .content {
-  height: auto;
+  // height: auto;
 }
 
 .header {
